# hmk

./: .gitignore  Dockerfile  GEMINI.md  LICENSE  PLAN.md  README.md  build.gradle  build.gradle.kts  docker-compose.yml  instrucciones.md  instructions.md  settings.gradle  settings.gradle.kts
server/: README.md
server/api/: .dockerignore  api.Dockerfile  pyproject.toml
server/api/src/: main.py
server/api/src/lib/: __init__.py
server/api/test/: main.py  setup.py  test_health.py  test_metadata.py
server/db/: .dockerignore  db.Dockerfile
server/db/init/01-setup/: 01-setup.sql
server/db/init/02-tables/: 01-hmb.sql  01-hmk.sql
server/db/init/03-data/: 01-sample-data.sql
server/db/local-setup/: 00-setup.sql  01-setup-schemas.sql
server/db/scripts/: init-db.sh
server/src/main/kotlin/com/example/: Application.kt  HealthHandler.kt
src/main/kotlin/kt/nrda/: HmkApplication.kt  ServletInitializer.kt
src/main/kotlin/kt/nrda/hmk/service/: AuthService.kt  ScoreService.kt
src/main/kotlin/tc2/thing/hmk/: HelloServlet.kt  TestAPI.kt
src/main/resources/: application.properties  attributions.md
src/main/resources/static/css/: style.css
src/main/resources/static/images/: attributions.md
src/main/resources/static/js/: game.js
src/main/resources/templates/: index.html  login.html  register.html
src/main/resources/templates/fragments/: components.html  layout.html
src/main/webapp/: game.jsp  index.jsp  login.jsp  register.jsp
src/main/webapp/css/: styles.css
src/test/: api-test.http
src/test/kotlin/kt/nrda/: HmkApplicationTests.kt  api-test.http
(+41 files in other folders)
